--- a/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
+++ b/src/app/components/admin/edit-config-forms/edit-config-forms.component.scss
@@ -260,7 +260,8 @@
         }
         .conf-btn,
         .conf-download-btn,
-        .conf-swipers {
+        .conf-swipers,
+        .conf-db-conector {
             display: flex;
             flex-wrap: wrap;
             height: fit-content;
