--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,12 +26,14 @@
             <p></p>
         </div>
     </div>
-    <h2>Create something new here!</h2>
-    <div id="welcome-block">
-        <p id="welcome-text"><span></span>Let's make this day special by starting something amazing! In your CMS, you'll find all the tools to bring your creative ideas to life.<span></span></p>
-        <div id="startBlock">
-            <button id="start"><p>Get started!</p></button>
-            <label for="start"><p>Login to your account!</p></label>
+    <h2 class="BackgroundColor">Create something new here!</h2>
+    <div  id="welcome-block" >
+        <div class="BackgroundColor" id="welcome-text">
+            <p  id="welcome-text"><span></span>Let's make this day special by starting something amazing! In your CMS, you'll find all the tools to bring your creative ideas to life.<span></span></p>
+        </div>
+        <div class="BackgroundColor" id="startBlock">
+            <a class="BorderColor" id="start" [routerLink]="[ 'login' ]"><p class="Small">Get started!</p></a>
+            <label class="Small Color" for="start"><p>Login to your account!</p></label>
         </div>
     </div>
 </div>
