--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -2,7 +2,7 @@
     <app-element *ngFor="let item of headerSchema?.body?.main?.children" [element]="item" ></app-element>
 </header>
 <main>
-    <app-element *ngFor="let item of mainSchema?.body?.main?.children" [element]="item"></app-element>
+    <app-element *ngFor="let item of mainPageSchema?.body?.main?.children" [element]="item"></app-element>
 </main>
 <footer>
     <app-element *ngFor="let item of footerSchema?.body?.main?.children" [element]="item"></app-element>
