--- a/src/app/components/admin/admin/admin.component.html
+++ b/src/app/components/admin/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="BackgroundColor">
+<div class="adminRoot BackgroundColor">
     <app-aside *ngIf="showAside" focusedItem="{{focusedItem}}"></app-aside>
     <router-outlet></router-outlet>
 </div>
