--- a/src/app/components/admin/dashboard/dashboard.component.scss
+++ b/src/app/components/admin/dashboard/dashboard.component.scss
@@ -1,13 +1,15 @@
 @import "../../../../styles.scss";
 :host {
+    position: relative;
     flex-grow: 1;
     max-width: 86%;
     height: 100%;
     box-sizing: border-box;
-    padding: 35px;
+    padding: 0px 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
+    overflow: auto;
     &::-webkit-scrollbar{
         display: none;
     }
@@ -30,34 +32,19 @@
     height: 38%;
     display: flex;
     justify-content: space-between;
-
+    
+    &> .blovk {
+        width: 40%;
+    }
     #start {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        #stats {
-            width: 55%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            .stat {
-                display: flex;
-                align-items: center;
-                margin: 0px 5px;
-                flex-grow: 1;
-                width: max-content;
-                p {
-                    margin: 0px;
-                    margin-left: 5px;
-                }
-            }
-        }
         a {
             display: block;
             width: max-content;
-            font-size: calc($size-index * 0.8);
             text-align: center;
             margin: 0px;
             text-decoration: none;
@@ -103,9 +90,6 @@
         display: none;
     }
 }
-#stats-actions > div {
-    width: 49%;
-}
 #wishes {
     width: 100%;
     height: 40%;
@@ -121,7 +105,6 @@
         h3 {
             width: 100%;
             margin: 0px;
-            font-size: calc($size-index * 1.3);
             font-weight: 400;
         }
         textarea {
@@ -135,7 +118,7 @@
             box-sizing: border-box;
             background-color: rgb(41, 41, 41);
             color: white;
-            font-size: calc($size-index * 1);
+            flex-grow: 1;
             &::placeholder {
                 color: $color-opacity;
             }
@@ -160,5 +143,30 @@
             border: 5px solid rgba(0, 0, 0, 0.3);
             color: rgba(0, 0, 0, 0.3);
         }
+    }
+}
+@media (max-width: 1000px){
+    #stats-actions{
+        height: fit-content !important;
+        flex-wrap: wrap;
+    }
+    .block{
+        width: 100% !important;
+        height: fit-content !important;
+        margin: 10px 0px;
+    }
+    #wishes{
+        height: fit-content !important;
+        form{
+            height: fit-content !important;
+            flex-wrap: wrap !important;
+
+            button{
+                width: 100% !important;
+            }
+        }
+    }
+    :host{
+        overflow: scroll;
     }
 }
