--- a/src/app/components/admin/files/files.component.scss
+++ b/src/app/components/admin/files/files.component.scss
@@ -1,57 +1,122 @@
 @import "../../../../styles.scss";
 $n: 6;
-:host{
-    display: flex;
-    flex-direction: column;
+:host {
+    position: relative;
     flex-grow: 1;
     max-width: 86%;
     height: 100%;
     box-sizing: border-box;
-    padding: 35px;
+    padding: 0px 35px;
     padding-top: 0px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
-vg-player{
-    *{
+.editor {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 70%;
+    background-color: #1b2b34;
+    padding: 20px 10px;
+    padding-top: 30px;
+    box-sizing: border-box;
+    border: 3px solid #273e4c;
+    & > *:first-child {
+        width: 85%;
+    }
+    .btns {
+        position: relative;
+        z-index: 5;
+        width: 15%;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        .btn-update {
+            position: relative;
+            width: 100%;
+            p:first-child {
+                position: absolute;
+                bottom: 0px;
+                left: 0px;
+                width: 100%;
+                text-align: center;
+                z-index: -1;
+                color: $color-opacity;
+                transform: translate(0px, -0%);
+                padding: 10px 0px;
+                text-transform: capitalize;
+                transition-duration: 0.3s;
+                background-color: #304c5d;
+            }
+        }
+        .btn {
+            width: 100%;
+            text-align: center;
+            text-transform: uppercase;
+            color: white;
+            cursor: pointer;
+            padding: 10px 0px;
+            border-radius: 10px;
+            transition-duration: 0.3s;
+            background-color: #304c5d;
+            &:hover {
+                scale: 1.05;
+                filter: brightness(1.2);
+            }
+            &:target {
+                scale: 1.1;
+                filter: brightness(1.4);
+            }
+        }
+    }
+}
+vg-player {
+    * {
         margin: auto;
         box-sizing: content-box !important;
     }
-    vg-overlay-play{
+    vg-overlay-play {
         position: absolute;
     }
-    video{
+    video {
         width: 960px;
         height: 540px;
     }
 }
-.img-card{
+.img-card {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 40% !important;
     height: max-content;
-    transition-duration: .5s;
+    transition-duration: 0.5s;
     margin: 10px;
     cursor: pointer;
     border-radius: 10px;
-    .back-img{
+    .back-img {
         position: absolute;
         width: 105%;
         height: 105%;
         filter: blur(8px);
-        transition-duration: .5s;
+        transition-duration: 0.5s;
         background-size: cover;
         opacity: 0.65;
         background-position: center;
         z-index: -1;
     }
-    img{
+    img {
         width: 90%;
         height: auto;
         z-index: 4;
     }
 }
-.mainDirs{
+.mainDirs {
     position: relative;
     display: flex;
     align-items: center;
@@ -62,71 +127,75 @@ vg-player{
     border: 2px solid $color-opacity;
     border-radius: 10px;
     transition-duration: 1s;
-    box-shadow:  0px 0px 5px 1px $color-opacity-opacity, inset 0px 0px 5px 1px $color-opacity-opacity;
-    *{
+    box-shadow:
+        0px 0px 5px 1px $color-opacity-opacity,
+        inset 0px 0px 5px 1px $color-opacity-opacity;
+    * {
         margin: 0;
         text-transform: uppercase;
         font-weight: 700;
-        transition-duration: .5s;
+        transition-duration: 0.5s;
         color: $color;
     }
-    &>p{
+    & > p {
         margin: 10px 0px;
     }
-    ul{
+    ul {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
         flex-grow: 1;
         padding: 0;
         list-style: none;
-        li{
+        li {
             display: flex;
             align-items: center;
+            justify-content: center;
             padding: 10px;
-            width: calc(100% / ($n) - 40px);
+            min-width: calc(50vw / ($n) - 40px);
             border-radius: 10px;
+            width: fit-content;
             box-sizing: border-box;
             cursor: pointer;
             user-select: none;
-            &:hover{
+            &:hover {
                 scale: 1.2;
                 background-color: rgba(255, 255, 255, 0.08);
             }
-            p{
-                width: 100%;
+            p {
                 text-align: center;
             }
         }
     }
 }
-.files-dirs{
+.files-dirs {
     flex-grow: 1;
     box-sizing: border-box;
     overflow: scroll;
-    transition-duration: .5s;
-    &::-webkit-scrollbar{
+    transition-duration: 0.5s;
+    &::-webkit-scrollbar {
         display: none;
     }
-    *{
-        transition-duration: .5s;
+    * {
+        transition-duration: 0.5s;
     }
-    header{
+    header {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        width: calc(100vw * .85 - 60px);
+        width: calc(100vw * 0.85 - 60px);
         position: sticky;
         top: 0px;
         left: 0px;
         z-index: 3;
         margin-bottom: 20px;
-        .search{
+        .search {
             display: flex;
             justify-content: space-between;
             align-items: center;
             width: 100%;
             padding: 0px 5px;
-            &>input{
+            & > input {
                 width: 35%;
                 padding: 10px;
                 outline: none;
@@ -135,18 +204,18 @@ vg-player{
                 border-radius: 5px;
                 color: white;
                 box-sizing: border-box;
-                &::placeholder{
+                &::placeholder {
                     text-transform: uppercase;
                     color: $color-opacity;
                 }
-                &:focus{
+                &:focus {
                     scale: 1.05;
                 }
             }
-            .upload{
+            .upload {
                 display: flex;
                 justify-content: end;
-                p{
+                p {
                     color: white;
                     background-color: $color;
                     text-transform: uppercase;
@@ -155,15 +224,15 @@ vg-player{
                     cursor: pointer;
                     border-radius: 10px;
                     border: 3px solid;
-                    &:hover{
+                    &:hover {
                         scale: 1.1;
                     }
                 }
-                input{
+                input {
                     display: none;
                 }
             }
-            p{
+            p {
                 color: white;
                 background-color: $color;
                 text-transform: uppercase;
@@ -171,18 +240,20 @@ vg-player{
                 margin: 0px 10px;
                 cursor: pointer;
                 border-radius: 10px;
-                &:hover{
+                &:hover {
                     scale: 1.1;
                 }
             }
         }
-        .columnTitle{
+        .columnTitle {
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
             width: 100%;
             margin-top: 10px;
-            &>p{
+            padding: 0px 20px;
+            box-sizing: border-box;
+            & > p {
                 width: 15%;
                 flex-grow: 1;
                 margin-bottom: 0px;
@@ -190,70 +261,70 @@ vg-player{
                 text-transform: uppercase;
                 overflow: hidden;
             }
-            hr{
+            hr {
                 width: 100%;
                 border: 3px solid $color;
                 margin-top: 0;
             }
         }
-        .createFolder{
+        .createFolder {
             position: relative;
             display: flex;
             flex-direction: column;
             justify-content: end;
             align-items: center;
-            p{
+            p {
                 border: 3px solid;
             }
-            input{
+            input {
                 position: absolute;
                 transform: translate(0px, 120%);
                 width: 100%;
                 border: none;
                 outline: none;
                 border-bottom: 5px solid;
-                transition-duration: .2s;
+                transition-duration: 0.2s;
                 color: white;
                 overflow: hidden;
                 margin: 0;
-                &:focus{
+                &:focus {
                     scale: 1.05;
                 }
             }
         }
     }
-    section{
-        width: calc(100vw * .85 - 90px);
+    section {
+        width: calc(100vw * 0.85 - 90px);
         margin: auto;
         box-sizing: border-box;
-        transition-duration: .2s;
-        padding: 20px 0px;
+        transition-duration: 0.2s;
+        padding: 20px;
         border-bottom: 5px solid $color-opacity;
-        &:hover{
+        &:hover {
             background-color: rgba(255, 255, 255, 0.1);
-            &>div{
+            & > div {
                 scale: 1.02;
-                &>img{
+                & > img {
                     filter: brightness(1.5);
                 }
             }
-            &>div .funcBtn{
+            & > div .funcBtn {
                 opacity: 1;
                 pointer-events: all;
             }
         }
-        &>div{
+        & > div {
             position: relative;
             display: flex;
             justify-content: space-around;
             align-items: center;
             width: 100%;
-            &>*:not(div){
+            & > *:not(div) {
                 width: 15%;
                 margin: 0px;
-                transition-duration: .4s;
+                transition-duration: 0.4s;
             }
-            .showWindow{
+            .showWindow {
                 position: absolute;
                 left: 0px;
                 top: 0px;
@@ -261,77 +332,117 @@ vg-player{
                 height: 100%;
                 z-index: 1;
             }
-            input{
+            input {
                 background: none;
                 border: none;
                 outline: none;
                 border-bottom: 5px solid $color-opacity;
                 text-align: center;
                 z-index: 2;
+                flex-grow: 1;
             }
-            p{
+            p {
                 text-align: center;
                 padding: 10px;
                 border-radius: 5px;
-                &:first-of-type{
+                flex-grow: 1;
+                &:first-of-type {
                     text-transform: uppercase;
                 }
             }
-            img{
+            img {
                 position: relative;
                 max-height: 30vh;
                 object-fit: contain;
                 object-position: center;
                 cursor: pointer;
+                flex-grow: 1;
             }
-            &::before, &::after{
+            &::before,
+            &::after {
                 position: absolute;
                 right: 0px;
-                font-weight:700;
+                font-weight: 700;
                 z-index: 1;
                 background-color: rgba(23, 23, 23, 0.7);
                 box-shadow: 0px 0px 3px 3px rgba(23, 23, 23, 0.7);
                 color: $color;
                 pointer-events: none;
             }
-            &::after{
+            &::after {
                 content: attr(fileResolution);
                 bottom: 0px;
                 right: 20%;
                 transform: translate(100%, 0px);
             }
-            &::before{
+            &::before {
                 content: attr(filesize);
                 bottom: 0px;
             }
-            .funcBtn{
+            .funcBtn {
                 position: absolute;
                 top: 0px;
                 right: 0px;
-                transform: translate(-25%, -50%);
+                transform: translate(calc(-0% + 10px), -50%);
                 z-index: 3;
                 overflow: hidden;
-                transition-duration: .8s;
+                transition-duration: 0.8s;
                 opacity: 0;
                 pointer-events: none;
-                img{
+                img {
                     width: calc($size-index * 1.5);
                     cursor: pointer;
-                    box-sizing: content-box;
-                    &:hover{
-                        background-color: rgba(255, 0, 0, 0.25);
-                        box-shadow: 0px 0px 3px 3px rgba(255, 0, 0, 0.25);
-                    }
+                    // box-sizing: content-box;
                 }
             }
         }
-        .folder{
-            p:first-child{
+        .folder {
+            p:first-child {
                 cursor: pointer;
-                &:hover{
+                &:hover {
                     background-color: $color-opacity-opacity;
                 }
             }
+        }
+    }
+}
+@media (max-width: 800px){
+    .files-dirs{
+        header{
+            .search{
+                flex-wrap: wrap !important;
+                input{
+                    width: 100% !important;
+                }
+            }
+        }
+    }
+    .files-dirs{
+        header{
+            width: calc(97vw - 60px) !important;
+        }
+    }
+    .date{
+        display: none !important;
+    }
+    section{
+        width: calc(97vw - 60px) !important;
+        & > div {
+            .funcBtn{
+                img{
+                    width: calc($size-index * 2.5) !important;
+                }
+            }
+        }
+    }
+    .folder{
+        p:first-of-type{
+            flex-grow: 1;
+        }
+    }
+    .editor{
+        & > *:first-child {
+            width: 100% !important;
         }
     }
 }
