--- a/src/app/components/admin/head/head.component.scss
+++ b/src/app/components/admin/head/head.component.scss
@@ -1,20 +1,70 @@
 @import "../../../../styles.scss";
 :host {
+    position: relative;
     flex-grow: 1;
     max-width: 86%;
     height: 100%;
     box-sizing: border-box;
-    padding: 35px;
+    padding: 0px 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
+    overflow: auto;
     &::-webkit-scrollbar{
         display: none;
     }
 }
-
+.row{
+    width: 100%;
+}
+.window {
+    .body {
+        width: 70%;
+        height: 70%;
+        padding: 15px;
+        box-sizing: border-box;
+        overflow: scroll;
+        background-color: white;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        section {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+            border-bottom: 3px solid;
+            div {
+                display: flex;
+                justify-content: center;
+                flex-grow: 1;
+                width: 50%;
+                p {
+                    color: black;
+                    width: fit-content;
+                }
+                &:last-child {
+                    p {
+                        text-transform: uppercase;
+                        padding: 10px 20px;
+                        border: 3px solid;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        transition-duration: 0.3s;
+                        color: white;
+                        user-select: none;
+                        &:hover {
+                            scale: 1.1;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 .block {
-    height: 100%;
     padding: 10px 20px;
     box-sizing: border-box;
     border: 3px solid $color;
@@ -25,11 +75,15 @@
     align-items: start;
     border-radius: 5px;
     box-shadow:  0px 0px 5px 1px $color-opacity-opacity, inset 0px 0px 5px 1px $color-opacity-opacity;
+    &::-webkit-scrollbar {
+        display: none;
+    }
     h3 {
         width: 100%;
         margin: 0px;
         font-size: calc($size-index * 1.3);
         font-weight: 600;
+        cursor: pointer;
     }
 }
 button, .button {
@@ -48,62 +102,46 @@ button, .button {
 }
 #prime-settings {
     width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: space-between;
-    #bootstrap-settings {
-        width: 30%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        form {
-            width: 100%;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: end;
-            justify-content: space-between;
-            ul {
-                width: 100%;
-                list-style: none;
-                padding: 0px;
-                font-size: calc($size-index * 0.9);
-                margin: 0px;
-                margin-top: 5px;
-                li {
-                    display: flex;
-                    justify-content: space-between;
-                    margin-bottom: 3px;
-                    input[type="radio"] {
-                        width: $size-index;
-                        background-color: yellow;
-                        accent-color: rgb(51, 51, 51);
-                        cursor: pointer;
-                        mix-blend-mode: multiply;
-                    }
-                }
-            }
-            
-        }
-    }
+    flex-direction: column;
     #files {
         width: 100%;
-        height: 100%;
         flex-direction: column;
         justify-content: start;
+        flex-grow: 1;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        header{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            .btns {
+                display: flex;
+                p {
+                    width: max-content;
+                    margin: 0px 10px;
+                    color: white;
+                    padding: 10px 20px;
+                    border-radius: 10px;
+                    cursor: pointer;
+                    border: 2px solid;
+                    text-transform: uppercase;
+                    text-align: center;
+                }
+            }
+        }
         .names{
             width: 100%;
             display: flex;
+            
             p{
                 margin: 0px;
+                flex-grow: 1;
+                text-align: center;
                 text-transform: capitalize;
+                width: fit-content;
             }
-        }
-        .col32{
-            width: 32%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
         hr{
             width: 100%;
@@ -113,11 +151,45 @@ button, .button {
         }
         .rows{
             width: 100%;
-            .row{
-                width: 100%;
+            overflow: scroll;
+            transition-duration: .5s;
+            max-height: 0px;
+            &::-webkit-scrollbar{
+                display: none;
+            }
+            h4{
+                user-select: none;
+            }
+            section {
+                position: relative;
                 display: flex;
-                p{
-                    margin: 0px;
+                justify-content: space-around;
+                align-items: center;
+                padding: 10px 0px;
+                transition-duration: .3s;
+                &:hover{
+                    background-color: rgba(245, 245, 245, 0.2);
+                }
+                .text {
+                    display: flex;
+                    justify-content: center;
+                    flex-grow: 1;
+                    width: 50%;
+                    p {
+                        width: max-content;
+                        color: white;
+                        flex-grow: 1;
+                        text-align: center;
+                    }
+                }
+                .btns{
+                    position: absolute;
+                    right: 0px;
+                    top: 0px;
+                    img {
+                        width: calc($size-index * 1.5);
+                        cursor: pointer;
+                    }
                 }
             }
         }
@@ -126,11 +198,22 @@ button, .button {
 
 #seo {
     margin-top: 20px;
-    form {
+    height: fit-content;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    &>div {
         width: 100%;
         height: 85%;
         display: flex;
+        flex-wrap: wrap;
         align-items: end;
+        max-height: 0px;
+        overflow: scroll;
+        transition-duration: .5s;
+        &::-webkit-scrollbar {
+            display: none;
+        }
         .group {
             display: flex;
             flex-direction: column;
@@ -156,8 +239,11 @@ button, .button {
                     border-radius: 10px;
                 }
                 textarea{
-                    height: 10vh;
+                    height: 20vh;
                     flex-grow: 1;
+                    &::-webkit-scrollbar{
+                        display: none;
+                    }
                 }
                 &>div{
                     display: flex;
@@ -173,12 +259,10 @@ button, .button {
             }
         }
         .group:not(#tags){
-            width: 35%;
+            width: 55%;
         }
         #tags{
-            border-right: 3px solid $color;
-            flex-grow: 2 !important;
-            width: 55%;
+            width: 40%;
             padding-right: 20px;
             div{
                 width: 100%;
@@ -209,5 +293,32 @@ button, .button {
                 }
             }
         }
+    }
+}
+@media (max-width: 900px){
+    #prime-settings {
+        #files {
+            header{
+                flex-wrap: wrap;
+                .btns{
+                    width: 100%;
+                    margin: 10px 0px;
+                    p{
+                        width: 45%;
+                        padding: 10px 0px !important;
+                        &:first-of-type{
+                            margin-left: 0px;
+                        }
+                        &:last-of-type{
+                            margin-right: 0px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .group{
+        width: 100% !important;
+        height: fit-content !important;
     }
 }
