--- a/src/app/components/admin/users/users.component.scss
+++ b/src/app/components/admin/users/users.component.scss
@@ -1,10 +1,11 @@
 @import "../../../../styles.scss";
 :host {
+    position: relative;
     flex-grow: 1;
     max-width: 86%;
     height: 100%;
     box-sizing: border-box;
-    padding: 35px;
+    padding: 0px 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
@@ -176,5 +177,17 @@
             pointer-events: none;
             transition-duration: .5s;
         }
+    }
+}
+@media (max-width: 800px){
+    :host{
+        flex-direction: row !important;
+        overflow: auto;
+    }
+    .img-card{
+        max-width: 40% !important;
+    }
+    .profile, .steps{
+        width: 100%;
     }
 }
