--- a/src/app/components/page/page.component.scss
+++ b/src/app/components/page/page.component.scss
@@ -1,22 +1,20 @@
-$size-index: calc(1vw + 1svh );
-:host{
+@import "../../../styles.scss";
+:host {
     display: contents;
 }
-:host::ng-deep{
-    
-    header{
+:host::ng-deep {
+    header {
         border-top: none;
-
-        @media (max-width: 1300px){
-            .video-js{
-                width: 62vw  !important;
-                height: 32vw  !important;
+        @media (max-width: 1300px) {
+            .video-js {
+                width: 62vw !important;
+                height: 32vw !important;
             }
-            .swiper{
-                width: 50%  !important;
+            .swiper {
+                width: 50% !important;
                 max-width: none !important;
             }
-            .area{
+            .area {
                 max-width: 75% !important;
             }
             .Large {
@@ -46,18 +44,18 @@ $size-index: calc(1vw + 1svh );
                 font-weight: 400;
             }
         }
-        .title{
+        .title {
             transform: translate(0px, 40%);
             background-color: whitesmoke;
             border-radius: 5px;
             font-size: calc($size-index * 2.5);
             width: fit-content;
         }
-        .list{
+        .list {
             align-items: center;
             align-self: baseline !important;
         }
-        .btn{
+        .btn {
             width: fit-content;
             height: fit-content;
             padding: 10px 20px;
@@ -65,60 +63,61 @@ $size-index: calc(1vw + 1svh );
             color: black;
             text-decoration: none;
             text-transform: uppercase;
-            transition-duration: .3s;
-            &:hover{
+            transition-duration: 0.3s;
+            &:hover {
                 transform: translate(0px, 10%);
                 scale: 1.2;
             }
         }
-        .social-btn{
+        .social-btn {
             height: fit-content;
             background-color: black;
             padding: 5px;
             border-radius: 5px;
             box-sizing: content-box;
-            transition-duration: .3s;
-            &:hover{
+            transition-duration: 0.3s;
+            &:hover {
                 transform: translate(0px, -10%);
-                scale: .9;
+                scale: 0.9;
             }
         }
     }
-    main{
+    main {
         margin-top: 20px;
-        .title, .paragraph{
+        .title,
+        .paragraph {
             color: white;
         }
-        .swiper{
+        .swiper {
             max-width: 50vw;
-            .swiper-slide{
+            .swiper-slide {
                 padding: 0px 20px;
             }
         }
-        @media (max-width: 1300px){
-            main{
+        @media (max-width: 1300px) {
+            main {
                 overflow: visible !important;
             }
-            .video-js{
-                width: 62vw  !important;
-                height: 32vw  !important;
+            .video-js {
+                width: 62vw !important;
+                height: 32vw !important;
             }
-            .swiper{
-                width: 50%  !important;
+            .swiper {
+                width: 50% !important;
                 max-width: none !important;
             }
-            .area{
+            .area {
                 max-width: 75% !important;
             }
-            .list{
+            .list {
                 width: 50% !important;
                 padding: 0 !important;
-                li{
+                li {
                     width: 100% !important;
                 }
-                .area{
+                .area {
                     width: 0 !important;
-                    max-width: none!important;
+                    max-width: none !important;
                 }
             }
             .Large {
@@ -148,33 +147,33 @@ $size-index: calc(1vw + 1svh );
                 font-weight: 400;
             }
         }
-        @media (max-width: 1050px){
-            .video-js{
+        @media (max-width: 1050px) {
+            .video-js {
                 width: 98vw !important;
                 height: 55vw !important;
             }
-            .swiper{
+            .swiper {
                 width: 100% !important;
                 max-width: none !important;
             }
-            .area{
+            .area {
                 width: 100% !important;
-                max-width: none!important;
+                max-width: none !important;
             }
-            .list{
+            .list {
                 width: 100% !important;
-                li{
+                li {
                     width: 100%;
                 }
                 width: 100% !important;
                 padding: 0 !important;
-                .area{
+                .area {
                     width: 0 !important;
-                    max-width: none!important;
+                    max-width: none !important;
                 }
             }
-            .social-btn{
-                img{
+            .social-btn {
+                img {
                     width: calc($size-index * 3) !important;
                 }
             }
@@ -206,7 +205,7 @@ $size-index: calc(1vw + 1svh );
             }
         }
     }
-    footer{
+    footer {
         padding: 15px 20px;
         background-color: rgb(255, 255, 255);
         min-height: calc($size-index * 10);
@@ -214,34 +213,35 @@ $size-index: calc(1vw + 1svh );
         background-image: url("/assets/imgs/guest/footerBack.png");
         background-size: cover;
         background-position: center top;
-        box-shadow:inset 0px 0px 20px 5px rgba(0, 0, 0, 0.95);
-        .title, .paragraph{
+        box-shadow: inset 0px 0px 20px 5px rgba(0, 0, 0, 0.95);
+        .title,
+        .paragraph {
             color: black;
         }
-        .btn{
+        .btn {
             color: black;
             text-decoration: none;
         }
-        @media (max-width: 1300px){
-            .area, .list{
+        @media (max-width: 1300px) {
+            .area,
+            .list {
                 width: 100% !important;
                 flex-direction: row !important;
                 justify-content: start !important;
-                li{
+                li {
                     flex-grow: 0 !important;
                 }
             }
         }
-        @media (max-width: 765px){
-            .list{
+        @media (max-width: 765px) {
+            .list {
                 width: 100% !important;
                 flex-direction: row !important;
             }
         }
     }
-    
 }
-header{
+header {
     background-color: whitesmoke;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -250,19 +250,20 @@ header{
     overflow: visible;
     width: 98%;
 }
-main{
+main {
     overflow: hidden;
     height: max-content;
     align-items: start;
     width: 85%;
     flex-grow: 1;
 }
-footer{
+footer {
     width: 98%;
 }
-main, header, footer{
+main,
+header,
+footer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
