--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,17 +1,23 @@
-$size-index: calc(1vw + 1vh);
+@import "../../styles.scss";
 header {
     width: 100%;
     height: calc($size-index * 4.5);
     display: flex;
-    align-items: end;
+    align-items: center;
+    justify-content: space-between;
     background: linear-gradient(135deg, rgba(30, 30, 30, 1) 30%, rgba(40, 40, 40, 1) 73%, rgba(50, 50, 50, 1) 95%);
     -webkit-box-shadow: 0px 10px 10px 6px rgba(0, 0, 0, 0.51);
     -moz-box-shadow: 0px 10px 10px 6px rgba(0, 0, 0, 0.51);
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.3);
     color: white;
+    padding-left: 10px;
+    padding-right: 20px;
+    box-sizing: border-box;
     .logo {
         height: 100%;
         margin-right: 10px;
+        display: flex;
+        align-items: end;
         a {
             display: block;
             height: 100%;
@@ -24,7 +30,17 @@ header {
         margin: 0px;
         padding: 0px;
         font-weight: 600;
-        font-size: calc($size-index * 2);
         margin-bottom: calc($size-index * 0.5);
+    }
+    .btns{
+        p{
+            text-transform: uppercase;
+            transition-duration: .3s;
+            cursor: pointer;
+            &:hover{
+                scale: 1.1;
+                color: $color;
+            }
+        }
     }
 }
